==> starry-m/RT1021_OV2640_simple_camera/Third_Drivers/OV7670/camera.c <==
#include "camera.h"
#include "ov7670.h"

int32_t Camera_WriteReg(Camera_HandleTypeDef *hov, uint8_t regAddr, const uint8_t *pData)
{
	uint8_t tt[2];
	tt[0] = regAddr;
	tt[1] = pData[0];
//	if (HAL_I2C_Master_Transmit(hov->hi2c, hov->addr, tt, 2, hov->timeout) == HAL_OK)
//	{
//		return Camera_OK;
//	}
//	else
//	{
//		return camera_ERROR;
//	}

	status_t reVal = kStatus_Fail;
	reVal = LPI2C_MasterStart(hov->hi2c, hov->addr, kLPI2C_Write);
	if (reVal != kStatus_Success)
		return kStatus_Fail;
	while (LPI2C_MasterGetStatusFlags(hov->hi2c) & kLPI2C_MasterNackDetectFlag)
		;
	reVal = LPI2C_MasterSend(hov->hi2c, tt, 2);
	if (reVal != kStatus_Success)
		return kStatus_Fail;

	reVal = LPI2C_MasterStop(hov->hi2c);
	if (reVal != kStatus_Success)
		return kStatus_Fail;

	return Camera_OK;
}

int32_t Camera_ReadReg(Camera_HandleTypeDef *hov, uint8_t regAddr, uint8_t *pData)
{
//	HAL_I2C_Master_Transmit(hov->hi2c, hov->addr + 1, &regAddr, 1, hov->timeout);
//	if (HAL_I2C_Master_Receive(hov->hi2c, hov->addr + 1, pData, 1, hov->timeout) == HAL_OK)
//	{
//		return Camera_OK;
//	}
//	else
//	{
//		return camera_ERROR;
//	}

	   status_t reVal = kStatus_Fail;

	    reVal = LPI2C_MasterStart(hov->hi2c,hov->addr, kLPI2C_Write);
	    if (reVal != kStatus_Success)
	        return kStatus_Fail;
	    while (LPI2C_MasterGetStatusFlags(hov->hi2c) & kLPI2C_MasterNackDetectFlag)
	        ;

	    reVal = LPI2C_MasterSend(hov->hi2c, &regAddr, 1);
	    if (reVal != kStatus_Success)
	        return kStatus_Fail;

	    reVal = LPI2C_MasterRepeatedStart(hov->hi2c, hov->addr, kLPI2C_Read);
	    if (reVal != kStatus_Success)
	        return kStatus_Fail;

	    reVal = LPI2C_MasterReceive(hov->hi2c, pData, 1);
	    if (reVal != kStatus_Success)
	        return kStatus_Fail;

	    reVal = LPI2C_MasterStop(hov->hi2c);
	    if (reVal != kStatus_Success)
	        return kStatus_Fail;


	    return Camera_OK;
}
